<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_print_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:orientation="vertical"
    android:visibility="visible">

    <TableRow
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/txt_product_count"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_product_count"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="500dp"
            android:gravity="center_vertical|right"
            android:hint="@string/hint_18"
            android:textColor="@color/red"
            android:textColorHint="@color/red"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />
    </TableRow>

    <TableRow
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/txt_pay_number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_checkout_num"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="500dp"
            android:gravity="center_vertical|right"
            android:hint="@string/hint_108_20"
            android:textColor="@color/red"
            android:textColorHint="@color/red"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />
    </TableRow>

    <TableRow
        android:paddingVertical="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/txt_checkout_way"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_checkout_way"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="500dp"
            android:gravity="center_vertical|right"
            android:hint="@string/hint_weixin"
            android:textColor="@color/red"
            android:textColorHint="@color/red"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />
    </TableRow>
</LinearLayout>